--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,9 @@ dmypy.json
 # General
 .vagrant/
 
+### VSCode ###
+.vscode/
+
 # Log files (if you are creating logs in debug mode, uncomment this)
 # *.logs
 
